workspace = { members = ["example/listen"] }
[package]
name = "keyboard_listener_windows"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["self@lemonneko.moe"]
description = "You can use this library to listen your keyboard press and release ON windows."
keywords = ["windows", "win32", "keyboard-listener"]
categories = ["os::windows-apis"]
include = ["/README.md", "/LICENSE", "/Cargo.toml", "/src/**/*"]
readme = "README.md"
repository = "https://github.com/LemonNekoGH/keyboard_listener_windows"
homepage = "https://github.com/LemonNekoGH/keyboard_listener_windows"

[package.metadata.doc.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winuser", "errhandlingapi", "ntdef", "windef", "processthreadsapi"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
